--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <script src=”java.js”></script>
+    <script src=”java.js”><!-- javascript can also run from here -->
+    </script>
 </body>
 </html>
