--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 </head>
 <body>
    <!-- Original Structure -->
-<h1 id="quizQuestion">What is the capital of France?</h1>
-<button class="answerButton">Paris</button>
-<button class="answerButton">London</button>
-<button class="answerButton">Berlin</button>
-<button class="answerButton">Rome</button>
-<p id="feedback"></p>
-<p id="score">Score: 0</p>
+    <h1 id="quizQuestion">What is the capital of France?</h1>
+    <button class="answerButton">Paris</button>
+    <button class="answerButton">London</button>
+    <button class="answerButton">Berlin</button>
+    <button class="answerButton">Rome</button>
+    <p id="feedback"></p>
+    <p id="score">Score: 0</p>
+
+        <script src="java.js">
+            <!-- javascript can also run from here -->
+        </script>
+            
 
 </body>
 
